--- a/_posts/2022-04-25-2022年4月25日 周一.md
+++ b/_posts/2022-04-25-2022年4月25日 周一.md
@@ -1,8 +1,8 @@
 ---
-title: 
+title: 研零萌新瑟瑟发抖
 date: 2022-04-25 17:50:00 +0800
 categories: [生活]
-tags: [2022年4月25日]
+tags: [研零萌新的一天]
 pin: true
 author: 郑威琦
 
