--- a/_posts/2022-04-26-2022年4月26日 星期二.md
+++ b/_posts/2022-04-26-2022年4月26日 星期二.md
@@ -11,14 +11,10 @@ comments: true
 math: false
 mermaid: true
 
-image:
-  src: ./assets/blog_res/2022-04-26-Tuesday.assets
-#   alt: 
-
 ---
 ## 研零萌新
 
 ### BGM：Chang------ONE OK ROCK
-![BGM](../assets/blog_res/2022-04-26-Tuesday.assets/Morning.png)
+![BGM](/assets/blog_res/2022-04-26-Tuesday.assets/Morning.png)
 
 ### 感知机
