组会分享（一）

--- a/_posts/2022-04-26-第一次分享规划.md
+++ b/_posts/2022-04-26-第一次分享规划.md
@@ -1,7 +1,7 @@
 ---
 title: 第一次分享规划
 date: 2022-04-26 20:41:00 +0800
-categories: [组会分享规划]
+categories: [组会]
 tags: [组会个人分享]
 pin: false
 author: 郑威琦
