组会分享（一）

--- a/_posts/2022-04-27-组会分享（一）.md
+++ b/_posts/2022-04-27-组会分享（一）.md
@@ -13,8 +13,6 @@ mermaid: true
 
 ---
 
-# 组会分享（一）
-
 ## 1 前沿科技视野拓展
 
 [小蛮驴“沦陷”事件](https://www.bilibili.com/video/BV1b3411K7f1?spm_id_from=333.880.my_history.page.click)
@@ -23,9 +21,16 @@ mermaid: true
 
 [机器之心](https://www.jiqizhixin.com/articles/2022-04-19-3)
 
+量子位
+
 ## 2 个人博客搭建
 
 [1分钟免费博客搭建](https://www.bilibili.com/video/BV14S4y1N7Yr?spm_id_from=333.999.0.0)
 
 ## 3 神经网络反向误差传播
 
+### 3.1 神经网络
+
+&emsp;&emsp;神经网络实质是在生物学基础上（人类神经元）建立起来的数学模型。
+
+![M-P神经元](../assets/blog_res/2022-04-27-Thirsday.assets/M-P神经元.jpg)
