组会分享（一）

--- a/_posts/2022-04-27-组会分享（一）.md
+++ b/_posts/2022-04-27-组会分享（一）.md
@@ -29,8 +29,27 @@ mermaid: true
 
 ## 3 神经网络反向误差传播
 
-### 3.1 神经网络
+### **3.1 神经网络**
 
 &emsp;&emsp;神经网络实质是在生物学基础上（人类神经元）建立起来的数学模型。
 
-![M-P神经元](../assets/blog_res/2022-04-27-Thirsday.assets/M-P神经元.jpg)
+![M-P神经元](/assets/blog_res/2022-04-27-Thirsday.assets/M-P神经元.jpg)
+
+&emsp;&emsp;多个神经元同向排列（纵或横）组成一层（layer）。
+
+![神经网络](/assets/blog_res/2022-04-27-Thirsday.assets/神经网络.jpg)
+
+### **3.2 感知机**
+
+&emsp;&emsp;感知机（Perceptron）由两层神经元组成，输入层接收外界输入信号后传递给输出层，输出层为M-P神经元。
+
+![感知机](/assets/blog_res/2022-04-27-Thirsday.assets/Perceptron.jpg)
+
+![感知机计算]()
+
+&emsp;&emsp;感知机学习旨在求出将训练数据进行线性划分的分离超平面。  
+&emsp;&emsp;感知机的参数更新规则是基于梯度下降的，在这里不多作详述，直接给出西瓜书所给更新规则。
+
+<center>
+![感知机神经网络更新规则](/assets/blog_res/2022-04-27-Thirsday.assets/感知机神经网络更新规则.jpg)
+</center>
