组会分享（一）

--- a/_posts/2022-04-27-组会分享（一）.md
+++ b/_posts/2022-04-27-组会分享（一）.md
@@ -45,11 +45,23 @@ mermaid: true
 
 ![感知机](/assets/blog_res/2022-04-27-Thirsday.assets/Perceptron.jpg)
 
-![感知机计算]()
+![感知机计算](/assets/blog_res/2022-04-27-Thirsday.assets/感知机计算0.jpg)
 
 &emsp;&emsp;感知机学习旨在求出将训练数据进行线性划分的分离超平面。  
 &emsp;&emsp;感知机的参数更新规则是基于梯度下降的，在这里不多作详述，直接给出西瓜书所给更新规则。
 
-<center>
 ![感知机神经网络更新规则](/assets/blog_res/2022-04-27-Thirsday.assets/感知机神经网络更新规则.jpg)
-</center>
+
+### **3.3 基于标准梯度下降的误差逆传播算法**
+
+&emsp;&emsp;假设有网络N，其输入层有d个神经元，隐藏层有q个M-P神经元，输出层有l个神经元，且输入层与隐藏层、隐藏层与输出层为全连接。设输入层第i个神经元到隐藏层第h个神经元的权值为ν<sub>ih</sub>，隐藏层第h个神经元的输入为α<sub>h</sub>，阈值为γ<sub>h</sub>，输出为b<sub>h</sub>，隐藏层第h个神经元到输出层第j个神经元的权值为ω<sub>hj</sub>，输出层第j个神经元的输入为β<sub>j</sub>，阈值为θ<sub>j</sub>，输出为y<sub>j</sub>尖。
+
+![net](/assets/blog_res/2022-04-27-Thirsday.assets/net0.jpg)
+
+&emsp;&emsp;并且，令激活函数为Sigmoid函数。
+
+![Sigmoid](/assets/blog_res/2022-04-27-Thirsday.assets/Sigmoid0.jpg)
+
+&emsp;&emsp;由此，根据前向传播规则，我们可计算出这些参数的值：
+
+![cal](/assets/blog_res/2022-04-27-Thirsday.assets/cal%20nums0.jpg)
