组会分享（一）

--- a/_posts/2022-04-27-组会分享（一）.md
+++ b/_posts/2022-04-27-组会分享（一）.md
@@ -65,3 +65,34 @@ mermaid: true
 &emsp;&emsp;由此，根据前向传播规则，我们可计算出这些参数的值：
 
 ![cal](/assets/blog_res/2022-04-27-Thirsday.assets/cal%20nums0.jpg)
+
+&emsp;&emsp;然后，由于将网络在(X<sub>k</sub>, Y<sub>k</sub>)上的均方误差视为损失函数，则将损失函数最小化就是我们参数更新的依据，故计算出目标的负梯度方向，并以此对参数进行调整。
+
+&emsp;&emsp;均方误差如下：
+
+![均方误差](/assets/blog_res/2022-04-27-Thirsday.assets/E.jpg)
+
+&emsp;&emsp;根据梯度的数学定义，计算每个参数对应的负梯度。如下：
+
+![前两个参数](/assets/blog_res/2022-04-27-Thirsday.assets/前两个参数0.jpg)
+
+![后两个参数](/assets/blog_res/2022-04-27-Thirsday.assets/后两个参数0.jpg)
+
+&emsp;&emsp;总而言之：
+
+![总之](/assets/blog_res/2022-04-27-Thirsday.assets/总之.jpg)
+![g](/assets/blog_res/2022-04-27-Thirsday.assets/g.jpg)
+![e](/assets/blog_res/2022-04-27-Thirsday.assets/eh.jpg)
+
+&emsp;&emsp;最后给出算法流程：
+
+![算法流程](/assets/blog_res/2022-04-27-Thirsday.assets/算法流程.jpg)
+
+>
+    # 基于梯度下降的权值更新，通过不断地极小化目标函数（欧式距离/均方差）
+    def Weight_Update(self, i):
+        for j in range(len(self.w)):
+            self.w_changes[j] = self.lr * self.y_true[i] * self.x[i][j]
+            self.w[j] = self.w[j] + self.w_changes[j]
+        self.bias = self.bias + self.y_true[i] * self.lr
+>
