组会分享（一）

--- a/_posts/2022-04-27-组会分享（一）.md
+++ b/_posts/2022-04-27-组会分享（一）.md
@@ -80,19 +80,160 @@ mermaid: true
 
 &emsp;&emsp;总而言之：
 
-![总之](/assets/blog_res/2022-04-27-Thirsday.assets/总之.jpg)
-![g](/assets/blog_res/2022-04-27-Thirsday.assets/g.jpg)
+![总之](/assets/blog_res/2022-04-27-Thirsday.assets/总之.jpg)  
+![g](/assets/blog_res/2022-04-27-Thirsday.assets/g.jpg)  
 ![e](/assets/blog_res/2022-04-27-Thirsday.assets/eh.jpg)
 
 &emsp;&emsp;最后给出算法流程：
 
 ![算法流程](/assets/blog_res/2022-04-27-Thirsday.assets/算法流程.jpg)
 
+## 4 附录
+
+### **4.1 感知机代码**
+
 >
+from math import *
+from Activation_Function import *
+
+# 解决线性可分的基于梯度下降的感知机
+class Perceptron:
+    def __init__(self, input, output_true, learning_rate):
+        self.x = input
+        self.w = [0 for i in range(len(input[0]))] # 权值
+        self.y = [0 for i in range(len(input))] # y尖
+        self.y_true = output_true    # y
+        self.bias = 0
+        self.lr = learning_rate  # 学习率
+        self.w_changes = [0 for i in range(len(input[0]))]
+
+    # 前向传播计算出y值
+    def Forward_Propagation(self):
+        for i in range(len(self.x)):
+            for j in range(len(self.x[i])):
+                self.y[i] = self.y[i] + self.x[i][j] * self.w[j]
+            self.y[i] = self.y[i] + self.bias
+            self.y[i] = Sgn(self.y[i])
+
     # 基于梯度下降的权值更新，通过不断地极小化目标函数（欧式距离/均方差）
     def Weight_Update(self, i):
         for j in range(len(self.w)):
             self.w_changes[j] = self.lr * self.y_true[i] * self.x[i][j]
             self.w[j] = self.w[j] + self.w_changes[j]
         self.bias = self.bias + self.y_true[i] * self.lr
+
+    # 判断是否正确完成线性分割
+    def whether_all_correct(self):
+        for i in range(len(self.y)):
+            if self.y[i] * self.y_true[i] <= 0:
+                return i
+            continue
+        return -1
+
+def train():
+    input = [[1, 1], [1, 0], [0, 1], [0, 0]]
+    output_true = [1, -1, -1, -1]
+    # input = [[3, 3], [4, 3], [1, 1]]
+    # output_true = [1, 1, -1]
+    learning_rate = 0.5
+    p = Perceptron(input, output_true, learning_rate)
+    p.Forward_Propagation()
+    i = p.whether_all_correct()
+    while i != -1:
+        print("x: " + str(p.x) + " y: " + str(p.y) + " w:　" + str(p.w) + " b: " + str(p.bias))
+        p.Weight_Update(i)
+        p.Forward_Propagation()
+        i = p.whether_all_correct()
+    print("x: " + str(p.x) + " y: " + str(p.y) + " w:　" + str(p.w) + " b: " + str(p.bias))
+>
+
+### **4.2 BP代码（有问题，但可以帮助理解算法流程）**
+
+>
+from math import *
+from Activation_Function import *
+
+# 构建神经网络
+class NeuralNetwork:
+    def __init__(self, input_neural_num, hidden_neural_num, output_neural_num, X, learning_rate):
+        # 网络层数
+        self.input_neural_num = input_neural_num    # 输入层神经元个数
+        self.hidden_neural_num = hidden_neural_num  # 隐藏层神经元个数
+        self.output_neural_num = output_neural_num  # 输出层神经元个数
+        # 输入
+        self.x = X  # For instance(Page 105 in 西瓜书): X = [[0, 0, 1], [1, 0, 0], [0, 2, 0], [1, 1, 0], [2, 2, 0]]
+        self.lr = learning_rate  # 学习率
+        # 输出
+        self.niu_ih = [0 for i in range(input_neural_num * hidden_neural_num)]  # input -> hidden
+        self.gamma = [0 for i in range(hidden_neural_num)]  # 隐藏层阈值向量
+        self.omega_hj = [0 for i in range(hidden_neural_num * output_neural_num)]  # hidden -> output
+        self.theta = [0 for i in range(output_neural_num)]  # 输出层阈值向量
+        self.y = [0 for i in range(output_neural_num)]
+        # 参数
+        self.b = [0 for i in range(hidden_neural_num)]
+        # 梯度项
+        self.g = [0 for i in range(output_neural_num)]    # 输出层梯度项
+        self.e = [0 for i in range(hidden_neural_num)]    # 隐藏层梯度项
+
+    def ForwardPropagation(self, x):
+        alpha = []  # 隐藏层输入
+        alpha_h = 0
+        # 计算隐藏层输出向量b
+        for h in range(self.hidden_neural_num):
+            for i in range(self.input_neural_num):
+                alpha_h += x[i] * self.niu_ih[i * self.hidden_neural_num + h]
+            alpha.append(alpha_h)
+            alpha_h = 0
+            self.b[h] = Sigmoid(alpha[h] - self.gamma[h])
+        beta = []   # 输出层输入
+        beta_j = 0
+        # 计算输出层输出向量y
+        for j in range(self.output_neural_num):
+            for h in range(self.hidden_neural_num):
+                beta_j += self.b[h] * self.omega_hj[h * self.output_neural_num + j]
+            beta.append(beta_j)
+            beta_j = 0
+            self.y[j] = Sigmoid(beta[j] - self.theta[j])
+
+    def Cal_g(self, x):
+        for j in range(self.output_neural_num):
+            self.g[j] = self.y[j] * (1 - self.y[j]) * (x[self.input_neural_num] - self.y[j])
+
+    def Cal_e(self):
+        for h in range(self.hidden_neural_num):
+            contribution = 0
+            for j in range(self.output_neural_num):
+                contribution += self.g[j] * self.omega_hj[h * self.output_neural_num + j]
+            self.e[h] = self.b[h] * (1 - self.b[h]) * contribution
+
+    def BP(self, x):
+        for h in range(self.hidden_neural_num):
+            for j in range(self.output_neural_num):
+                self.omega_hj[h * self.output_neural_num + j] += self.lr[1] * self.g[j] * self.b[h]
+        for j in range(self.output_neural_num):
+            self.theta[j] -= self.lr[1] * self.g[j]
+        for i in range(self.input_neural_num):
+            for h in range(self.hidden_neural_num):
+                self.niu_ih[i * self.hidden_neural_num + h] += self.lr[0] * self.e[h] * x[i]
+        for h in range(self.hidden_neural_num):
+            self.gamma[h] -= self.lr[0] * self.e[h]
+
+    # 迭代
+    def run(self):
+        for x in self.x:
+            self.ForwardPropagation(x)
+            self.Cal_g(x)
+            self.Cal_e()
+            self.BP(x)
+
+if __name__ == "__main__":
+    input_neural_num = 2
+    hidden_neural_num = 2
+    output_neural_num = 2
+    X = [[0, 0, 1], [1, 0, 0], [1, 1, 0], [0, 2, 0], [2, 2, 0]]
+    learning_rate = [0.6, 0.4]
+    nn = NeuralNetwork(input_neural_num, hidden_neural_num, output_neural_num, X, learning_rate)
+    for i in range(200):
+        print("y: " + str(nn.y))
+        nn.run()
 >
