李宏毅学习笔记1

--- a/_posts/2022-05-02-李宏毅课程笔记-1.md
+++ b/_posts/2022-05-02-李宏毅课程笔记-1.md
@@ -31,7 +31,7 @@ mermaid: true
 
 ## 3、步骤三：通过参数更新找一个使得当前损失函数值最小的模型（Optimization）
 
-（1）w<sup>*</sup>，b<sup> *</sup> = arg min(w，b) *L*  
+（1）w<sup>\*</sup>，b<sup>\*</sup> = arg min(w，b) *L*  
 
 （2）如何去更新参数呢？-> 梯度下降？  
 
