--- a/_posts/2022-05-02-李宏毅课程笔记-1.md
+++ b/_posts/2022-05-02-李宏毅课程笔记-1.md
@@ -31,7 +31,7 @@ mermaid: true
 
 ## 3、步骤三：通过参数更新找一个使得当前损失函数值最小的模型（Optimization）
 
-（1）w<sup>\*</sup>，b<sup>\*</sup> = arg min(w，b) *L*  
+（1）w\*，b\* = arg min(w，b) *L*  
 
 （2）如何去更新参数呢？-> 梯度下降？  
 
@@ -56,7 +56,7 @@ mermaid: true
 *<center>y = b + $\sum \limits_ {i=1}^7$w<sub>j</sub>x<sub>j</sub></center>*
 
 &emsp;&emsp;类似的，可以将前二十八天的播放量作为输入：
-<center>y = b + $\sum \limits_{i=1}^{28}$w<sub>j</sub>x<sub>j</sub></center>
+*<center>y = b + $\sum \limits_ {i=1}^{28}$w<sub>j</sub>x<sub>j</sub></center>*
 
 &emsp;&emsp;同理，前五十六天：
 *<center>y = b + $\sum \limits_{i=1}^{56}$w<sub>j</sub>x<sub>j</sub></center>*
