--- a/_posts/2022-05-02-李宏毅课程笔记-1.md
+++ b/_posts/2022-05-02-李宏毅课程笔记-1.md
@@ -53,13 +53,14 @@ mermaid: true
 ## 1、增加特征（输入）个数
 
 &emsp;&emsp;这里以课上的视频播放量为例，如果说wx<sub>1</sub>是将前1天的播放量作为输入预测下一天的，那么从表面上看显然不是很合理，那么就可以将前七天的播放量作为输入，于是就变为：
-*<center>y = b + $\sum \limits_ {i=1}^7$ w<sub>j</sub>x<sub>j</sub></center>*
+$$y = b + \sum \limits_ { i = i } ^ { 7 } w_ j x_ j$$
 
 &emsp;&emsp;类似的，可以将前二十八天的播放量作为输入：
-*<center>y = b + $\sum \limits_ {i=1}^{28}$w<sub>j</sub>x<sub>j</sub></center>*
+
+$$y = b + \sum \limits_ { i = i } ^ { 28 } w_ j x_ j$$
 
 &emsp;&emsp;同理，前五十六天：
-*<center>y = b + $\sum \limits_{i=1}^{56}$w<sub>j</sub>x<sub>j</sub></center>*
+$$y = b + \sum \limits_ { i = i } ^ { 56 } w_ j x_ j$$
 
 &emsp;&emsp;但是，从老师所给出的数据中可以看出：二十八天与五十六天的损失函数值已经相差无几，近乎没有进一步减小损失。
 
@@ -101,7 +102,7 @@ mermaid: true
 
 &emsp;&emsp;那么对于新模型，则有如下表达式：
 
-*<center>y = b + $\sum \limits_{i}$ c<sub>i</sub> Sigmoid(b<sub>i</sub> + w<sub>i</sub>x<sub>1</sub>)</center>*
+$$y = b + \sum \limits_ i c_ i Sigmoid(b_ i + w_ i x_ 1)$$
 
 &emsp;&emsp;即如图：
 
@@ -109,7 +110,7 @@ mermaid: true
 
 &emsp;&emsp;于是乎，对于*y = b + $\sum \limits_j$w<sub>j</sub>x<sub>j</sub>*，就有：
 
-*<center>y = b + $\sum \limits_{i}$ c<sub>i</sub> Sigmoid(b<sub>i</sub> + $\sum \limits_j$w<sub>ij</sub>x<sub>j</sub>)</center>*
+$$y = b + \sum \limits_ i c_ i Sigmoid(b_ i + \sum \limits_ j w_ {ij} x_ j)$$
 
 ## 5、小结
 
@@ -137,7 +138,7 @@ mermaid: true
 
 &emsp;&emsp;两个Relu叠起来就是一个hard sigmoid。
 
-*<center>y = b +$\sum\limits_{2i}$c<sub>i</sub>$\max$(0, b<sub>i</sub> + $\sum\limits_j$w<sub>ij</sub>x<sub>j</sub>)</center>*  
+$$y = b + \sum \limits_ {2i} c_ i max(0, b_ i + \sum \limits_ j w_ {ij} x_ j)$$
   
 ## 2、那为什么Relu函数比较好呢？
 
