--- a/_posts/2022-05-02-李宏毅课程笔记-1.md
+++ b/_posts/2022-05-02-李宏毅课程笔记-1.md
@@ -53,7 +53,7 @@ mermaid: true
 ## 1、增加特征（输入）个数
 
 &emsp;&emsp;这里以课上的视频播放量为例，如果说wx<sub>1</sub>是将前1天的播放量作为输入预测下一天的，那么从表面上看显然不是很合理，那么就可以将前七天的播放量作为输入，于是就变为：
-$$y = b + \sum \limits_ { i = i } ^ { 7 } w_ j x_ j$$
+$$y = b + \sum \limits_ {i=i}^ 7 w_ j x_ j$$
 
 &emsp;&emsp;类似的，可以将前二十八天的播放量作为输入：
 
