--- a/_posts/2022-05-02-李宏毅课程笔记-1.md
+++ b/_posts/2022-05-02-李宏毅课程笔记-1.md
@@ -74,6 +74,8 @@ $$y = b + \sum \limits_ { i = i } ^ { 56 } w_ j x_ j$$
 
 ![Linear models](/assets/blog_res/2022-05-02-Monday.assets/Linear%20models.png)
 
+<img src = "../assets/blog_res/2022-05-02-Monday.assets/Linear%20models.png" width = "50%">
+
 &emsp;&emsp;
 
 ## 2、假设有如下曲线需要机器学习
