李宏毅学习笔记1

--- a/_posts/2022-05-02-李宏毅课程笔记-1.md
+++ b/_posts/2022-05-02-李宏毅课程笔记-1.md
@@ -72,7 +72,7 @@ $$y = b + \sum \limits_ { i = i } ^ { 56 } w_ j x_ j$$
 
 ## 1、线性模型实在是太粗糙了，我们需要模拟得更加真切的模型！
 
-<img src = "../assets/blog_res/2022-05-02-Monday.assets/Linear%20models.png" width = "50%">
+<img src = "/assets/blog_res/2022-05-02-Monday.assets/Linear%20models.png" width = "50%">
 
 &emsp;&emsp;
 
