李宏毅学习笔记1

--- a/_posts/2022-05-02-李宏毅课程笔记-1.md
+++ b/_posts/2022-05-02-李宏毅课程笔记-1.md
@@ -72,7 +72,7 @@ $$y = b + \sum \limits_ { i = i } ^ { 56 } w_ j x_ j$$
 
 ## 1、线性模型实在是太粗糙了，我们需要模拟得更加真切的模型！
 
-<img src = "/assets/blog_res/2022-05-02-Monday.assets/Linear%20models.png" width = "50%">
+![Linear models](/assets/blog_res/2022-05-02-Monday.assets/Linear%20models.png)
 
 &emsp;&emsp;
 
@@ -106,7 +106,7 @@ $$y = b + \sum \limits_ i c_ i Sigmoid(b_ i + w_ i x_ 1)$$
 
 &emsp;&emsp;即如图：
 
-![new model](/assets/blog_res/2022-05-02-Monday.assets/new%20model%20within%20Sigmoid.png)
+![new model](/assets/blog_res/2022-05-02-Monday.assets/new%20model%20within%20Sigmoid.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;于是乎，对于*y = b + $\sum \limits_j$w<sub>j</sub>x<sub>j</sub>*，就有：
 
