李宏毅学习笔记1

--- a/_posts/2022-05-02-李宏毅课程笔记-1.md
+++ b/_posts/2022-05-02-李宏毅课程笔记-1.md
@@ -72,17 +72,17 @@ $$y = b + \sum \limits_ { i = i } ^ { 56 } w_ j x_ j$$
 
 ## 1、线性模型实在是太粗糙了，我们需要模拟得更加真切的模型！
 
-![Linear models](/assets/blog_res/2022-05-02-Monday.assets/Linear%20models.png)
+![Linear models](/assets/blog_res/2022-05-02-Monday.assets/Linear%20models.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;
 
 ## 2、假设有如下曲线需要机器学习
 
-![curve](/assets/blog_res/2022-05-02-Monday.assets/curve.png)
+![curve](/assets/blog_res/2022-05-02-Monday.assets/curve.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;那么，可以将其拆分成y = constant和一些折线型的函数之和：
 
-![red curve](/assets/blog_res/2022-05-02-Monday.assets/red%20curve.png)
+![red curve](/assets/blog_res/2022-05-02-Monday.assets/red%20curve.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;于是乎，既有了个可用的既定结论（已经在数学中被证明）：  
 
@@ -98,7 +98,7 @@ $$y = b + \sum \limits_ { i = i } ^ { 56 } w_ j x_ j$$
 
 &emsp;&emsp;可以利用带有参数的Sigmoid函数近似去表示。
 
-![sigmoid with paramters](/assets/blog_res/2022-05-02-Monday.assets/Sigmoid%20Function%20with%20Parameters.png)
+![sigmoid with paramters](/assets/blog_res/2022-05-02-Monday.assets/Sigmoid%20Function%20with%20Parameters.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;那么对于新模型，则有如下表达式：
 
@@ -116,19 +116,19 @@ $$y = b + \sum \limits_ i c_ i Sigmoid(b_ i + \sum \limits_ j w_ {ij} x_ j)$$
 
 &emsp;&emsp;综上，借助生物学中神经网络的形象和概念，就可以将以上深化过程形象地描绘成以下：
 
-![deepen1](/assets/blog_res/2022-05-02-Monday.assets/deepen1.png)  
+![deepen1](/assets/blog_res/2022-05-02-Monday.assets/deepen1.png){:hight="50%" width="50%"}  
 
 &emsp;&emsp;那么借助于线性代数的知识可以将其进一步简化为：
 
-![linear math form](/assets/blog_res/2022-05-02-Monday.assets/Lenear%20Math%20form.png)  
+![linear math form](/assets/blog_res/2022-05-02-Monday.assets/Lenear%20Math%20form.png){:hight="50%" width="50%"}  
 
 &emsp;&emsp;同理：
 
-![deepen2](/assets/blog_res/2022-05-02-Monday.assets/deepen2.png)
+![deepen2](/assets/blog_res/2022-05-02-Monday.assets/deepen2.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;则，其中需要更新的参数就有如下这些：
 
-![parameters](/assets/blog_res/2022-05-02-Monday.assets/parameters.png)
+![parameters](/assets/blog_res/2022-05-02-Monday.assets/parameters.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;
 
@@ -150,13 +150,13 @@ $$y = b + \sum \limits_ {2i} c_ i max(0, b_ i + \sum \limits_ j w_ {ij} x_ j)$$
 
 ## &emsp;&emsp;经过上面的铺垫，那么就可以自然而然地抛出神经网络与深度网络和深度学习的概念与模型了。
 
-![Deep Learning](/assets/blog_res/2022-05-02-Monday.assets/Deep%20Learning.png)
+![Deep Learning](/assets/blog_res/2022-05-02-Monday.assets/Deep%20Learning.png){:hight="50%" width="50%"}
 
 ## 1、常见的深度学习模型
 
 &emsp;&emsp;AlexNet(2012, 8 layers, los_rate: 16.4%), VGG(2014, 19 layers, los_rate: 7.3%), GoogleNet(2014, 22 layers, los_rate: 6.7%)
 
-![deep network](/assets/blog_res/2022-05-02-Monday.assets/deep%20network.png)
+![deep network](/assets/blog_res/2022-05-02-Monday.assets/deep%20network.png){:hight="50%" width="50%"}
 
 ## 2、“深”的意义何在呢？多层隐藏层实际上在哪里做出了怎样的贡献呢？
 
