--- a/_posts/2022-05-04-李宏毅课程笔记-2.md
+++ b/_posts/2022-05-04-李宏毅课程笔记-2.md
@@ -33,7 +33,7 @@ mermaid: true
 
 &emsp;&emsp;这里主要就给出李宏毅老师的训练指南，粗浅的给出一些问题的解决方案。如图：
 
-![General Guide](/assets/blog_res/2022-05-04-Wednesday.assets/General%20Guide.png){: hight = "50%", width = "50%"}
+![General Guide](/assets/blog_res/2022-05-04-Wednesday.assets/General%20Guide.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;如果训练的效果不尽如人意，首先要检查在训练集上的误差有多大，如果训练集上的误差都很大，那么说明目前的模型是有问题的，具体问题可以分成两种。第一种是模型的问题，目前基于源模型训练得到的集合中，没有可以使得误差较小的模型，此时就需要更换模型，加深模型的深度，像增加特征、增加神经网络层数以增加深度等等。那么第二种就是Optimizaiton做得不好，没有找到一组参数能够使得误差较小。针对这种问题可以去关注梯度下降算法、是否陷入到了局部最优等。  
 
@@ -51,7 +51,7 @@ mermaid: true
 
 &emsp;&emsp;直接先来一张图，这张图大概展示了overfitting的现象。
 
-![overfitting](/assets/blog_res/2022-05-04-Wednesday.assets/overfitting.png){: hight = "50%" width = "50%"}
+![overfitting](/assets/blog_res/2022-05-04-Wednesday.assets/overfitting.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;至于说深度较大、参数较多的模型为什么会产生这样的曲线，会在之后的课程当中从数学的角度去说明。  
 
@@ -59,17 +59,17 @@ mermaid: true
 
 &emsp;&emsp;那么解决过拟合的最简单的方法就是增加训练资料，使模型被适当的限制住。增加训练资料最简单的就是根据原有的资料制作合乎情理的新资料。比如：
 
-![solution to overfitting](/assets/blog_res/2022-05-04-Wednesday.assets/overfitting.png){: hight = "50%" width = "50%"}
+![solution to overfitting](/assets/blog_res/2022-05-04-Wednesday.assets/overfitting.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;像CNN是一个比较有限制的模型，它是根据影像的特性进而限制，而全连接的神经网络其实是比较灵活的。
 
-![solutiong to overfitting 2](/assets/blog_res/2022-05-04-Wednesday.assets/solution%20to%20overfitting%202.png){: hight = "50%" width = "50%"}
+![solutiong to overfitting 2](/assets/blog_res/2022-05-04-Wednesday.assets/solution%20to%20overfitting%202.png){:hight="50%" width="50%"}
 
 ## *②分布不匹配*
 
 &emsp;&emsp;举个最简单的例子，在概率论中我们学过均匀分布和正态分布，本来你基于训练集训练出来的是个正态分布，完了测试集是个均匀分布，那误差不大才怪呢。  
 
-![Mismatch](/assets/blog_res/2022-05-04-Wednesday.assets/Mismatch.png){: hight = "50%" width = "50%"}
+![Mismatch](/assets/blog_res/2022-05-04-Wednesday.assets/Mismatch.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;是不是mismathc往往要看数据的产生方式，以及对问题的理解等等。具体的应对在作业10处会进行讲解。
 
@@ -79,13 +79,13 @@ mermaid: true
 
 ## 3、如何选择/找到一个合适的模型
 
-![loss and model complex](/assets/blog_res/2022-05-04-Wednesday.assets/loss%20and%20model%20complex.png){: hight = "50%" width = "50%"}
+![loss and model complex](/assets/blog_res/2022-05-04-Wednesday.assets/loss%20and%20model%20complex.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;在这节课程中提到的方式是交叉验证（cross validation），将训练集分为Training Set和Validation Set来进行训练和验证。
 
 &emsp;&emsp;进一步的有N-fold Cross Validation
 
-![N-fold cross validation](/assets/blog_res/2022-05-04-Wednesday.assets/N-fold%20cross%20validation.png)
+![N-fold cross validation](/assets/blog_res/2022-05-04-Wednesday.assets/N-fold%20cross%20validation.png){:hight="50%" width="50%"}
 
 # （二）本节课遗留问题
 
