李宏毅学习笔记2

--- a/_posts/2022-05-04-李宏毅课程笔记-2.md
+++ b/_posts/2022-05-04-李宏毅课程笔记-2.md
@@ -75,10 +75,10 @@ mermaid: true
 
 ![N-fold cross validation](/assets/blog_res/2022-05-04-Wednesday.assets/N-fold%20cross%20validation.png){:hight="50%" width="50%"}
 
-# （二）本节课遗留问题
+## 4、本节课遗留问题
 
-## 1、如何解决Optimization的问题
+1、如何解决Optimization的问题
 
-## 2、在数学上，深度较大、参数较多的模型为什么会产生灵活多变的曲线
+2、在数学上，深度较大、参数较多的模型为什么会产生灵活多变的曲线
 
-## 3、如何判断误差较大是由于分布不匹配（mismatch）产生的，并且如何解决？
+3、如何判断误差较大是由于分布不匹配（mismatch）产生的，并且如何解决？
