--- a/_posts/2022-05-06-李宏毅课程笔记-3.md
+++ b/_posts/2022-05-06-李宏毅课程笔记-3.md
@@ -1,5 +1,5 @@
 ---
-title: 李宏毅机器学习笔记-2-关于Optimization的优化
+title: 李宏毅机器学习笔记-3-关于Optimization的优化
 date: 2022-05-04 14:00:00 +0800
 categories: [机器学习入门]
 tags: [李宏毅机器学习课程笔记]
@@ -29,31 +29,31 @@ mermaid: true
 
 ## 1、为什么Optimization会失败
 
-##### &emsp;&emsp;一般而言，在进行梯度下降的过程陷入到了临界点（critical point）会导致Optimization失败。临界点一般包括极小/大值点（local minima/maxima）和鞍点（saddle point）。
+&emsp;&emsp;一般而言，在进行梯度下降的过程陷入到了临界点（critical point）会导致Optimization失败。临界点一般包括极小/大值点（local minima/maxima）和鞍点（saddle point）。
 
 ![optimization failed](/assets/blog_res/2022-05-06-Friday.assets/optimization%20failed.png){:hight="50%", width="50%"}
 
-##### &emsp;&emsp;由于梯度下降是对损失函数（Loss Function）进行梯度下降，寻找能够使得损失函数最小化的一组参数（其可以归类为函数的最优化问题，类比遗传算法）,尽管损失函数不能很好地被表示（写）出来，但是我们可以利用泰勒展开来进行分类讨论，即“实际优化问题的目标函数往往比较复杂，为了使问题简化，通常将目标函数在某点附近展开为泰勒多项式来逼近原函数”。
+&emsp;&emsp;由于梯度下降是对损失函数（Loss Function）进行梯度下降，寻找能够使得损失函数最小化的一组参数（其可以归类为函数的最优化问题，类比遗传算法）,尽管损失函数不能很好地被表示（写）出来，但是我们可以利用泰勒展开来进行分类讨论，即“实际优化问题的目标函数往往比较复杂，为了使问题简化，通常将目标函数在某点附近展开为泰勒多项式来逼近原函数”。
 
-##### &emsp;&emsp;在同济版高等数学中，第九章第九节有对二元函数的泰勒公式的讲解，以下插入对多元函数的泰勒公式的简单阐述。
+&emsp;&emsp;在同济版高等数学中，第九章第九节有对二元函数的泰勒公式的讲解，以下插入对多元函数的泰勒公式的简单阐述。
 
 ## 2、多元函数的泰勒公式
 
-### *（1）二元函数的泰勒公式*
+### （1）二元函数的泰勒公式
 
-### *（2）多元函数的泰勒公式*
+### （2）多元函数的泰勒公式
 
-#### *①Hessian Matrix——黑塞矩阵*
+#### ①Hessian Matrix——黑塞矩阵
 
-#### *②多元函数的泰勒矩阵*
+#### ②多元函数的泰勒矩阵
 
 ## 3、如何判断当前是陷入到极小值、极大值或者是鞍点？
 
-##### &emsp;&emsp;根据多元函数的泰勒展开有：
+&emsp;&emsp;根据多元函数的泰勒展开有：
 
 $$L(\theta) \approx L(\theta^ ') + ( \theta - \theta^ ')g + \frac{ 1 }{ 2 }( \theta - \theta^ ')H( \theta - \theta^ ')$$ 
 
-##### &emsp;&emsp;若当前处在临界点，则其一阶偏导（即梯度）为0，二阶偏导的状态可以确定处在哪个临界点。
+&emsp;&emsp;若当前处在临界点，则其一阶偏导（即梯度）为0，二阶偏导的状态可以确定处在哪个临界点。
 
 ## 4、如果陷入到鞍点如何解决？
 
