李宏毅学习笔记3

--- a/_posts/2022-05-06-李宏毅课程笔记-3.md
+++ b/_posts/2022-05-06-李宏毅课程笔记-3.md
@@ -31,7 +31,7 @@ mermaid: true
 
 &emsp;&emsp;一般而言，在进行梯度下降的过程陷入到了临界点（critical point）会导致Optimization失败。临界点一般包括极小/大值点（local minima/maxima）和鞍点（saddle point）。
 
-![optimization failed](/assets/blog_res/2022-05-06-Friday.assets/optimization%20failed.png){:hight="50%", width="50%"}
+![optimization failed](/assets/blog_res/2022-05-06-Friday.assets/optimization%20failed.png){:hight="50%" width="50%"}
 
 &emsp;&emsp;由于梯度下降是对损失函数（Loss Function）进行梯度下降，寻找能够使得损失函数最小化的一组参数（其可以归类为函数的最优化问题，类比遗传算法）,尽管损失函数不能很好地被表示（写）出来，但是我们可以利用泰勒展开来进行分类讨论，即“实际优化问题的目标函数往往比较复杂，为了使问题简化，通常将目标函数在某点附近展开为泰勒多项式来逼近原函数”。
 
@@ -51,7 +51,7 @@ mermaid: true
 
 &emsp;&emsp;根据多元函数的泰勒展开有：
 
-$$L(\theta) \approx L(\theta^ ') + ( \theta - \theta^ ')g + \frac{ 1 }{ 2 }( \theta - \theta^ ')H( \theta - \theta^ ')$$ 
+$$L( \theta) \approx L( \theta^ ') + ( \theta - \theta^ ')g + \frac{ 1 }{ 2 }( \theta - \theta^ ')H( \theta - \theta^ ')$$ 
 
 &emsp;&emsp;若当前处在临界点，则其一阶偏导（即梯度）为0，二阶偏导的状态可以确定处在哪个临界点。
 
