李宏毅学习笔记3

--- a/_posts/2022-05-06-李宏毅课程笔记-3.md
+++ b/_posts/2022-05-06-李宏毅课程笔记-3.md
@@ -51,7 +51,7 @@ mermaid: true
 
 &emsp;&emsp;根据多元函数的泰勒展开有：
 
-$$L( \theta) \approx L( \theta^ ') + ( \theta - \theta^ ')g + \frac{ 1 }{ 2 }( \theta - \theta^ ')H( \theta - \theta^ ')$$ 
+$$L(\theta) \approx L(\theta^ `) + (\theta - \theta^ `)g + \frac{ 1 }{ 2 }( \theta - \theta^ `)H( \theta - \theta^ `)$$
 
 &emsp;&emsp;若当前处在临界点，则其一阶偏导（即梯度）为0，二阶偏导的状态可以确定处在哪个临界点。
 
