--- a/_posts/2022-05-06-李宏毅课程笔记-3.md
+++ b/_posts/2022-05-06-李宏毅课程笔记-3.md
@@ -43,8 +43,9 @@ mermaid: true
 
 &emsp;&emsp;**定理 设$z=f(x,y)$在点$(x,y)$的某一邻域内连续且有$(n+1)$阶连续偏导数，$(x_ 0 + h,y_ 0 + k)$为此邻域内任一点，则有**
 
-$f(x_ 0 + h,y_ 0 + k) = f(x_ 0,y_ 0) + (h\frac{\partial}{\partial x} +  
-k\frac{\partial}{\partial y})f(x_ 0,y_ 0) + \frac{1}{2!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ 2 f(x_ 0,y_ 0) + \cdots + \frac{1}{n!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ n f(x_ 0,y_ 0) + \frac{1}{(n+1)!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ (n+1) f(x_ 0 + \theta h,y_ 0 + \theta k) (0<\theta<1)$
+$f(x_ 0 + h,y_ 0 + k) = f(x_ 0,y_ 0) + (h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})f(x_ 0,y_ 0) +  
+\frac{1}{2!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ 2 f(x_ 0,y_ 0) + \cdots + \frac{1}{n!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ n f(x_ 0,y_ 0) +  
+\frac{1}{(n+1)!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ (n+1) f(x_ 0 + \theta h,y_ 0 + \theta k) (0<\theta<1)$
 
 ### （2）多元函数的泰勒公式
 
