李宏毅学习笔记3

--- a/_posts/2022-05-06-李宏毅课程笔记-3.md
+++ b/_posts/2022-05-06-李宏毅课程笔记-3.md
@@ -45,8 +45,7 @@ mermaid: true
 
 $f(x_ 0 + h,y_ 0 + k)$  
 $= f(x_ 0,y_ 0) + (h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})f(x_ 0,y_ 0) +$  
-$\frac{1}{2!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ 2 f(x_ 0,y_ 0) + \cdots + \frac{1}{n!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ n f(x_ 0,y_ 0) +$  
-$\frac{1}{(n+1)!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^{n+1} f(x_ 0 + \theta h,y_ 0 + \theta k)&emsp;(0<\theta<1)$
+$\frac{1}{2!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ 2 f(x_ 0,y_ 0) + \cdots + \frac{1}{n!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ n f(x_ 0,y_ 0) + \frac{1}{(n+1)!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^{n+1} f(x_ 0 + \theta h,y_ 0 + \theta k)&emsp;(0<\theta<1)$
 
 ### （2）多元函数的泰勒公式
 
