李宏毅学习笔记3

--- a/_posts/2022-05-06-李宏毅课程笔记-3.md
+++ b/_posts/2022-05-06-李宏毅课程笔记-3.md
@@ -43,15 +43,19 @@ mermaid: true
 
 &emsp;&emsp;**定理 设$z=f(x,y)$在点$(x,y)$的某一邻域内连续且有$(n+1)$阶连续偏导数，$(x_ 0 + h,y_ 0 + k)$为此邻域内任一点，则有**
 
-$f(x_ 0 + h,y_ 0 + k)$  
-$= f(x_ 0,y_ 0) + (h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})f(x_ 0,y_ 0) +$  
-$\frac{1}{2!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ 2 f(x_ 0,y_ 0) + \cdots + \frac{1}{n!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^ n f(x_ 0,y_ 0) + \frac{1}{(n+1)!}(h\frac{\partial}{\partial x} + k\frac{\partial}{\partial y})^{n+1} f(x_ 0 + \theta h,y_ 0 + \theta k)&emsp;(0<\theta<1)$
+![binary taylor](/assets/blog_res/2022-05-06-Friday.assets/binary%20taylor.png){: hight="50%" width="50%"}
 
 ### （2）多元函数的泰勒公式
 
 #### ①Hessian Matrix——黑塞矩阵
 
-#### ②多元函数的泰勒矩阵
+![binary hession](/assets/blog_res/2022-05-06-Friday.assets/binary%20hession.png){: hight="50%" width="50%"}
+
+![multiple hession](/assets/blog_res/2022-05-06-Friday.assets/multiple%20hession.png){: hight="50%" width="50%"}
+
+#### ②多元函数的泰勒公式
+
+![multiple taylor](/assets/blog_res/2022-05-06-Friday.assets/mutiple%20taylor.png){: hight="50%" width="50%"}
 
 ## 3、如何判断当前是陷入到极小值、极大值或者是鞍点？
 
