李宏毅学习笔记3

--- a/_posts/2022-05-06-李宏毅课程笔记-3.md
+++ b/_posts/2022-05-06-李宏毅课程笔记-3.md
@@ -49,13 +49,13 @@ mermaid: true
 
 #### ①Hessian Matrix——黑塞矩阵
 
-![binary hession](/assets/blog_res/2022-05-06-Friday.assets/binary%20hession.png){: hight="50%" width="50%"}
+![binary hession](/assets/blog_res/2022-05-06-Friday.assets/binary%20hession.png)
 
-![multiple hession](/assets/blog_res/2022-05-06-Friday.assets/multiple%20hession.png){: hight="50%" width="50%"}
+![multiple hession](/assets/blog_res/2022-05-06-Friday.assets/multiple%20hession.png)
 
 #### ②多元函数的泰勒公式
 
-![multiple taylor](/assets/blog_res/2022-05-06-Friday.assets/mutiple%20taylor.png){: hight="50%" width="50%"}
+![multiple taylor](/assets/blog_res/2022-05-06-Friday.assets/mutiple%20taylor.png)
 
 ## 3、如何判断当前是陷入到极小值、极大值或者是鞍点？
 
