--- a/_posts/2022-05-09-李宏毅课程笔记-4.md
+++ b/_posts/2022-05-09-李宏毅课程笔记-4.md
@@ -82,3 +82,7 @@ mermaid: true
 &emsp;&emsp;1、batch在实际的神经网络中如何操作的？涉及到实际的操作和代码是怎样的？目前对于batch等的认知还比较抽象，需要在实践中进行完善。
 
 &emsp;&emsp;2、batch作为超参数在实际过程中如何很好地进行调节？
+
+# 附录
+
+[On Large-Batch Training for Deep Learning: Generalization Gap and Sharp Minima](https://arxiv.org/abs/1609.04836)
