李宏毅学习笔记5

--- a/_posts/2022-05-06-李宏毅课程笔记-3.md
+++ b/_posts/2022-05-06-李宏毅课程笔记-3.md
@@ -1,5 +1,5 @@
 ---
-title: 李宏毅机器学习笔记-3-关于Optimization的优化
+title: 李宏毅机器学习笔记-3-做好Optimizaiton之极值点（local minima/maxima）与鞍点（saddle point）
 date: 2022-05-06 14:00:00 +0800
 categories: [机器学习入门]
 tags: [李宏毅机器学习课程笔记]
