--- a/_posts/2022-05-09-李宏毅课程笔记-4.md
+++ b/_posts/2022-05-09-李宏毅课程笔记-4.md
@@ -1,5 +1,5 @@
 ---
-title: 李宏毅机器学习笔记-4-批次与动量
+title: 李宏毅机器学习笔记-4-做好Optimization之批次训练（batch）和动量（momentum）
 date: 2022-05-09 14:00:00 +0800
 categories: [机器学习入门]
 tags: [李宏毅机器学习课程笔记]
