李宏毅学习笔记7

--- a/_posts/2022-05-11-李宏毅课程笔记-6.md
+++ b/_posts/2022-05-11-李宏毅课程笔记-6.md
@@ -40,3 +40,5 @@ mermaid: true
 &emsp;&emsp;1、李宏毅再youtube上的课程
 
 &emsp;&emsp;2、各种书籍（有时间可以买一下李沐的《动手学深度学习》第二版）
+
+&emsp;&emsp;3、[Logistic Regression](https://www.youtube.com/watch?v=hSXFuypLukA)
